fix referral position and social links on mobile

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -36,6 +36,9 @@
  		margin-bottom:50px;
  		margin-left:0;
  	}
+ 	#refer .social-links .sep {
+ 		display:none;
+ 	}
  	#refer .referral-count, #refer .chair-photos {
  		margin-bottom:25px;
  	}
@@ -87,6 +90,9 @@
 		padding-left:1em;
 		padding-right:1em;
 	}
+	#refer .social-links .sep {
+ 		display:inline-block;
+ 	}
  	#home .form-wrap, #refer .referral-count, #refer .chair-photos {
  		float:none;
  		width:100%;
@@ -96,7 +102,7 @@
 		top:-100px;
 	}
 	#refer .referral-count {
-		top:40px;
+		top:80px;
 	}
 	#refer .chair-photos {
 		top:0;
